<?xml version="1.0"?>
<package format="3">
  <name>imu_filter_ros_irl</name>
  <version>0.1.0</version>
  <description>Extended Kalman Filter for IMU orientation estimation with optional magnetometer and gravity compensation</description>
  <maintainer email="hoanghung21301580@gmail.com">Your Name</maintainer>
  <license>MIT</license>
  <author email="hoanghung21301580@gmail.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>eigen</depend>
  <depend>matplotlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>